checking LinkedHashSet TreeSet